Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.1.0-rc1
-
host: Windows 8.1 x64
device: Sony Xperia Z1 compact (D5503), Android 5.1.1
-
6c2036d900f5ac5fac982d61c1d5c8a9deb5e4e1
Description
Steps to reproduce:
- Create "Qt Quick Controls 2 Application"
- Choose an Android Qt version (5.7.0, android_armv7 in my case)
- Open "Debug" mode -> "Start QML Profiler analysis"
- Choose your device
- Wait for profiling to start
- "Stop"
Actual result:
Creator crashes (qtcreator.exe has stopped working)
Expected result:
profiling result is shown
Attachments
For Gerrit Dashboard: QTCREATORBUG-16667 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
166205,4 | Android: Run stop() asynchronously | 4.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |